--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <!-- <div class="col-xs-6 col-sm-6"><span><i class="fa fa-phone">&nbsp;0987654321</i></span></div> -->
         </div>
        
-        <div class="box-search box-search-mobile col-xs-12">
+        <div class="box-search box-search-mobile">
             <div class="search-text col-xs-7" id="search_text">
                 <form action="" method="get" accept-charset="utf-8">
                     <div class="form-group">
